Fixed problem with buffered shapes will generate single isolated lines but there is no retract (#2378)